--- a/views/login.ejs
+++ b/views/login.ejs
@@ -7,17 +7,23 @@
 	</head>
 	<body class="login-content">
 		<div class="login-panel">
+			<form
+			enctype="application/x-www-form-urlencoded"
+					method="POST"
+					action="/login_form"
+					>
 			<div class="title">XXX区块链后台管理平台<br>管理员登录</div>
-			<input id="username" type="text" placeholder="请输入用户名"/>
-			<input id="password" type="password" placeholder="请输入密码"/>
+			<input id="email" type="text" name="email" placeholder="请输入用户名"/>
+			<input id="password" type="password" name="password" placeholder="请输入密码"/>
 			<div style="height: 5px;"></div>
 			<input type="checkbox"  value="请输入密码" /><label>记住密码</label>
-			<input type="button" value="登 录" onclick="loginLayer.login()"/>
+			<input type="submit" value="submit"/>
+			</form>
 			<div class="error-info"></div>
 		</div>
 		
 		<script type="text/javascript" src="js/jquery-3.0.0/jquery-3.0.0.min.js"></script>
-		<script type="text/javascript" src="js/login.js"></script>
+		<!-- <script type="text/javascript" src="js/login.js"></script> -->
 		
 		
 	</body>
